k8s/frontend-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apex-frontend
  namespace: apex-energy
  labels:
    app: apex-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apex-frontend
  template:
    metadata:
      labels:
        app: apex-frontend
    spec:
      containers:
      - name: frontend
        image: pranjal1712/apex-energy-frontend:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: apex-frontend-svc
  namespace: apex-energy
spec:
  selector:
    app: apex-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
